Day 7 : Implement pagination for user listing and assign default role during registration