@@ -1,6 +1,7 @@
 package com.ecommerce.auth.service.impl;
 
 
+import com.ecommerce.auth.dto.PaginatedResponse;
 import com.ecommerce.auth.dto.UserDto;
 import com.ecommerce.auth.exception.UserNotFoundException;
 import com.ecommerce.auth.exception.UserNotFoundException;
@@ -8,6 +9,10 @@ import com.ecommerce.auth.model.User;
 import com.ecommerce.auth.repository.UserRepository;
 import com.ecommerce.auth.service.AdminService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
@@ -22,10 +27,23 @@ public class AdminServiceImpl implements AdminService {
     private final UserRepository userRepository;
 
     @Override
-    public List<UserDto> getAllUsers() {
-        return userRepository.findAll().stream()
+    public PaginatedResponse<UserDto> getAllUsers(int page, int size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by("id").descending());
+        Page<User> userPage = userRepository.findAll(pageable);
+
+        List<UserDto> userDtos = userPage
+                .stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
+
+        return PaginatedResponse.<UserDto>builder()
+                .content(userDtos)
+                .pageNumber(userPage.getNumber())
+                .pageSize(userPage.getSize())
+                .totalElements(userPage.getTotalElements())
+                .totalPages(userPage.getTotalPages())
+                .lastPage(userPage.isLast())
+                .build();
     }
 
 
